--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,7 +46,6 @@
   border-radius: 2.1rem; /* Optional: Rounded corners */
 }
 
-
 .app-container {
   height: 100%;
   margin: 0;
@@ -86,3 +85,76 @@
   overflow-y: auto;
   padding: 10px; /* Optional, for some spacing */
 }
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 4rem;
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #ccc;
+}
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-toggle {
+  display: none;
+  font-size: 2rem;
+  margin-left: 5.5rem;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 2rem;
+  font-weight: 600;
+}
+
+.navbar-links a {
+  color: black;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+
+.mobile-menu {
+  display: none;
+}
+
+.mobile-menu.open {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 75%;
+  max-width: 300px;
+  background-color: white;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.mobile-menu .close-button {
+  align-self: flex-end;
+  font-size: 2rem;
+}
+
+@media (max-width: 768px) {
+  .navbar-container {
+    padding: 1rem 2rem;
+  }
+
+  .navbar-toggle {
+    display: block;
+  }
+
+  .navbar-links {
+    display: none;
+  }
+}
+
